--- a/my-app/src/css/Profile.less
+++ b/my-app/src/css/Profile.less
@@ -1,4 +1,5 @@
 @main_color: #690c97;
+@main_gray: #F2F2F2;
 
 .user_section{
     position: absolute;
@@ -49,10 +50,31 @@
 
         .user_info {
             display: grid;
-            grid-template-columns: 30% 70%;
+            grid-template-columns: 50% 50%;
             align-content: center;
             height: 100%;
             width: 100%;        
+
+            .user-fields {
+                display: grid;
+                
+                button {
+                    height: 30px;
+                    width: 50%;
+                    margin-top: 20px;
+                    box-sizing: border-box;
+                    background-color: #F2F2F2;
+                    border: 2px solid #690c97;
+                    color: #690c97;
+                    font-size: 16px;
+
+                    &:hover {
+                        background-color: @main_color;
+                        color: @main_gray;
+                        cursor: pointer;
+                    }
+                }
+            }
         }   
 
         .cart {
